# mcp-meeting-rooms

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Procfile  README.md  cli.sh  demo.py  inspect.sh  pyproject.toml  railway.toml  requirements.txt  start.sh
docs/plans/: 2026-04-04-mcp-meeting-rooms.md
docs/specs/: 2026-04-04-mcp-meeting-rooms-design.md
scripts/: cli_client.py  seed.py
src/meeting_rooms/: __init__.py  db.py  models.py  repository.py  server.py  tools.py
tests/: conftest.py  test_db.py  test_integration.py  test_models.py  test_repository.py  test_tools.py
