[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-meeting-rooms"
version = "0.1.0"
description = "MCP server for meeting room bookings"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pydantic>=2",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_rooms"]

[tool.pytest.ini_options]
pythonpath = ["src"]
